old/net-probe-server-istio-old.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: net-probe-server
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /net-probe-server
    rewrite:
      uriRegexRewrite:
        match: /net-probe-server/(.*)
        rewrite: /\1
    route:
    - destination:
        port:
          number: 80
        host: net-probe-server
